--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header class="logo">
-        <img class="imlogo" src="image/hdfc1.png" alt="logo">
+        <img class="imlogo" src="hdfc1.png" alt="logo">
     </header>
     <header class="header">
         <p class="headertext">Did you know?<br><strong>30 Lakh+</strong> customer like<br>you have chosen our Loan on Credit Card</p>
@@ -18,7 +18,7 @@
     </div>
     <div class="loanbox">
         <div>
-        <img src="image/wallet1c.jpg" alt="wall">
+        <img src="wallet1c.jpg" alt="wall">
         <p>Instant Loan on credit card</p>
         </div>
         <p class="pb1">You are just a few steps away</p>
@@ -30,7 +30,7 @@
         <button>Important Messages</button>
     </div>
     <div class="footer1">
-        <img src="image/security.png" alt="logo">
+        <img src="security.png" alt="logo">
         <p>Do not share your internet banking username/password or Credit/Debit Card number/CVV/OTP via e-mail or over the phone.</p>
     </div>
     <div class="btn3">
@@ -38,15 +38,15 @@
     </div>
     <div class="footer">
         <div>
-            <img class="i1" src="image/pass.png" alt="regenerater">
+            <img class="i1" src="pass.png" alt="regenerater">
             <p><strong>Regenerater</strong> your NetBanking IPIN(Password) online instantly by using one of the two methods-OTP sent to your registered mobile number and Debit card details Or OTP sent to your registered mobile number and email id (not applicable for senior citizen customers).<br><br><strong>Register</strong> for Netbanking online instantly with the help of OTP sent to your registered mobile number and Debit Card deta details.</p>
         </div>
         <div>
-            <img class="i2" src="image/webc.png" alt="Web">
+            <img class="i2" src="webc.png" alt="Web">
             <p><strong>Browser Requirements for NetBanking & Website</strong></p>
         </div>
         <div>
-            <img class="i3" src="image/clea.png" alt="Web">
+            <img class="i3" src="clea.png" alt="Web">
             <p><strong>Clearing Browser Cache</strong></p>
         </div>
     </div>
